Fixed the bug that caused the waves & waves-extension to separate when scrolling on mobile + sometimes desktop
Added #wave-extension div to #wave-container, turned #wave-container into a grid to be able to have them both there. Removed unnecessary rules from #wave-extension on mobile

--- a/index.css
+++ b/index.css
@@ -164,30 +164,32 @@ h1{
 /*########## Wave Effect ##########*/
 
 #wave-container{
+    display: grid;
+    grid-template-rows: 0fr 1fr;
     position: absolute;
+    top: 50%;
     z-index: -1;
-    top: 350px;
+    height: 50vh;
     width: 100%;
+    overflow: hidden;
 }
 
 .waves{
-    position: absolute;
     width: 100%;
     height: 10vh;
 }
 
 #wave-extension{
-    position: absolute;
     background-color: rgb(20, 20, 190);
     z-index: -2;
-    bottom: 0;
-    height: 46vh;
-    width: 100%;
+    height: 100%;
 }
 
 #wave-extension p{
     display: none;
 }
+
+/*########## Animation ##########*/
 
 .parallax > use{
     animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
@@ -249,13 +251,6 @@ h1{
 
     #wave-container{
         position: fixed;
+        height: 55vh; /*Covers up the body color that usually shows up when you scroll down for the 1st time*/
     }
-
-    #wave-extension{
-        position: fixed;
-        bottom: 0;
-        height: 46vh;
-        width: 100%;
-    }
-
 }
